@@ -1,33 +1,64 @@
 #!/bin/sh
 
-java -Xmx2000m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar -src $1 -jacoco $2 -nbRun $3 -out $4
+java -Xmx2000m -XX:MaxPermSize=256m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar -src $1 -jacoco $2 -nbRun $3 -out $4
 killall java
 
-java -Xmx2000m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar -src $1 -jacoco $2 -nbRun $3 -out $4
+java -Xmx2000m -XX:MaxPermSize=256m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar -src $1 -jacoco $2 -nbRun $3 -out $4
 killall java
 
-java -Xmx2000m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar -src $1 -jacoco $2 -nbRun $3 -out $4
+java -Xmx2000m -XX:MaxPermSize=256m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar -src $1 -jacoco $2 -nbRun $3 -out $4
 killall java
 
-java -Xmx2000m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar -src $1 -jacoco $2 -nbRun $3 -out $4
+java -Xmx2000m -XX:MaxPermSize=256m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar -src $1 -jacoco $2 -nbRun $3 -out $4
 killall java
 
-java -Xmx2000m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar -src $1 -jacoco $2 -nbRun $3 -out $4
+java -Xmx2000m -XX:MaxPermSize=256m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar -src $1 -jacoco $2 -nbRun $3 -out $4
 killall java
 
-java -Xmx2000m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar -src $1 -jacoco $2 -nbRun $3 -out $4
+java -Xmx2000m -XX:MaxPermSize=256m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar -src $1 -jacoco $2 -nbRun $3 -out $4
 killall java
 
-java -Xmx2000m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar -src $1 -jacoco $2 -nbRun $3 -out $4
+java -Xmx2000m -XX:MaxPermSize=256m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar -src $1 -jacoco $2 -nbRun $3 -out $4
 killall java
 
-java -Xmx2000m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar -src $1 -jacoco $2 -nbRun $3 -out $4
+java -Xmx2000m -XX:MaxPermSize=256m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar -src $1 -jacoco $2 -nbRun $3 -out $4
 killall java
 
-java -Xmx2000m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar -src $1 -jacoco $2 -nbRun $3 -out $4
+java -Xmx2000m -XX:MaxPermSize=256m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar -src $1 -jacoco $2 -nbRun $3 -out $4
 killall java
 
-java -Xmx2000m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar -src $1 -jacoco $2 -nbRun $3 -out $4
+java -Xmx2000m -XX:MaxPermSize=256m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar -src $1 -jacoco $2 -nbRun $3 -out $4
 killall java
+
+java -Xmx2000m -XX:MaxPermSize=256m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar -src $1 -jacoco $2 -nbRun $3 -out $4
+killall java
+
+java -Xmx2000m -XX:MaxPermSize=256m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar -src $1 -jacoco $2 -nbRun $3 -out $4
+killall java
+
+java -Xmx2000m -XX:MaxPermSize=256m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar -src $1 -jacoco $2 -nbRun $3 -out $4
+killall java
+
+java -Xmx2000m -XX:MaxPermSize=256m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar -src $1 -jacoco $2 -nbRun $3 -out $4
+killall java
+
+java -Xmx2000m -XX:MaxPermSize=256m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar -src $1 -jacoco $2 -nbRun $3 -out $4
+killall java
+
+java -Xmx2000m -XX:MaxPermSize=256m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar -src $1 -jacoco $2 -nbRun $3 -out $4
+killall java
+
+java -Xmx2000m -XX:MaxPermSize=256m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar -src $1 -jacoco $2 -nbRun $3 -out $4
+killall java
+
+java -Xmx2000m -XX:MaxPermSize=256m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar -src $1 -jacoco $2 -nbRun $3 -out $4
+killall java
+
+java -Xmx2000m -XX:MaxPermSize=256m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar -src $1 -jacoco $2 -nbRun $3 -out $4
+killall java
+
+java -Xmx2000m -XX:MaxPermSize=256m -jar target/Diversify-statements-1.0-SNAPSHOT-jar-with-dependencies.jar -src $1 -jacoco $2 -nbRun $3 -out $4
+killall java
+
 
 
